# review-C-CPP

./: .gitignore  main.c  test  test.c
Stack/: app  main.cpp
Stack/include/: stack.hpp
StackStudent/: CMakeLists.txt  Makefile  app  arm-toolchain.cmake  main.cpp
StackStudent/build_arm/: CMakeCache.txt  Makefile  cmake_install.cmake
StackStudent/build_x86/: CMakeCache.txt  Makefile  cmake_install.cmake
StackStudent/include/: StackStudent.hpp
StackStudent/src/: StackStudent.cpp
StackStudent/valgrind/: run_valgrind.sh  valgrind_report.txt
docs/: android_kernel_qemu_guide.md  busybox_commands_guide.md  qemu_folder_sharing_fix.md  qemu_kernel.md  tong_hop_qemu_kernel.md  vscode_kernel_setup.md
func pointer/: app  main.c
func pointer/include/: button.h  callback.h
func pointer/src/: button.c  callback.c
linklist/: app  main  main.c  test.c
linklist/include/: linklist.h  student.h
linklist/src/: linklist.c  student.c  student.txt
module&kernel/myapp/: myapp  myapp.c
module&kernel/mydriver/: BUILD.bazel  my_char_dev.c  my_char_dev.h
module&kernel/mymodule/: BUILD.bazel  hello_module.c
review-C/: README.md
review-C/include/: linklist.h  student.h
review-C/src/: linklist.c
shell/: test.sh
socket/: README.md  client  client.c  server  server.c
src/: student.c
